lang/examples/good/12-03-global-variable.wdr
fun test(): Int {
  return 1;
}

var a: Int = test();

fun main(): Void {
  printInt(a);

  return;
}
