lang/examples/bad/03-06-variable-overrinding.wdr
var a: Int = 1;
var a: String = "test";

fun main(): Void {
  printString(a);

  return;
}